[tool.ruff.lint]
ignore = ["F401","F403","F841"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
package = ["src/QRC"]

[project]
name = "QRC"
version = "0.1.1"
description = "Recurrence-free quantum reservoir computing implementation along with standard classical and quantum reservoir approaches - to predict chaotic dynamics"

authors = [
    { name = "Osama Ahmed", email = "o.ahmed22@imperial.ac.uk" },
]

license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
